fix: slider overflow revision + others

--- a/src/demos/slider/2020-brands-infinite.less
+++ b/src/demos/slider/2020-brands-infinite.less
@@ -2,10 +2,7 @@
 @import '~xtend-library/src/extensions/slider/slider.less';
 
 .demo--2020-brands-infinite {
-  .margin(y, giant);
-  .slides {
-    overflow: visible;
-  }
+  .padding(y, medium);
   .slides-inner {
     // dragger animations
     .transition-none() !important;
